--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+.btns{
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.todoList {
+display: flex;
+align-items: center;
+width: 100%;
+justify-content: flex-start;
+gap: 5px;
+flex-wrap: wrap;
+}
+.todo {
+width: 20%;
+height: 100px;
+color: black;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 20px;
+}
