--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,44 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.wrapper{
+.wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 100%;
 }
-.btns{
+.btns {
   margin-top: 10px;
   display: flex;
   gap: 10px;
   align-items: center;
 }
 .todoList {
-display: flex;
-align-items: center;
-width: 100%;
-justify-content: flex-start;
-gap: 5px;
-flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: flex-start;
+  gap: 5px;
+  flex-wrap: wrap;
+  
 }
 .todo {
-width: 20%;
-height: 100px;
-color: black;
-display: flex;
-justify-content: center;
-align-items: center;
-font-size: 20px;
+  width: 20%;
+  height: 100px;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
